# qt_ela_cmakelists_template

./: CMakeLists.txt  config.cmake
